# shitcraft

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: level.cpp  main.cpp
